--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="wrapper">
+    <button type="button" class="button">Нажать для появления текста</button>
+    <div class="container">
+      <div class="box">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. At alias 
+        laboriosam tempora rerum, nostrum pariatur accusantium magnam cumque delectus. 
+        Sed maxime, eum harum odio alias quo, voluptas assumenda quam similique odit 
+        quod dolores, laboriosam ad recusandae molestias autem iusto vero. Impedit 
+        praesentium modi delectus id maiores maxime recusandae, rem vitae.
+      </div>
+    </div>
+  </div>
     
 </body>
 </html>
