написание функций, стилей

--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-  <div class="wrapper">
-    <button type="button" class="button">Нажать для появления текста</button>
-    <div class="container">
-      <div class="box">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. At alias 
-        laboriosam tempora rerum, nostrum pariatur accusantium magnam cumque delectus. 
-        Sed maxime, eum harum odio alias quo, voluptas assumenda quam similique odit 
-        quod dolores, laboriosam ad recusandae molestias autem iusto vero. Impedit 
-        praesentium modi delectus id maiores maxime recusandae, rem vitae.
+  <h2>9. Домашнее задание к лекции «Анимации и CSS»</h2>
+  
+    <div class="wrapper">
+      <button type="button" class="button">Нажать для появления текста</button>
+      <div class="container">
+        <div class="box">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At alias 
+          laboriosam tempora rerum, nostrum pariatur accusantium magnam cumque delectus. 
+          Sed maxime, eum harum odio alias quo, voluptas assumenda quam similique odit 
+          quod dolores, laboriosam ad recusandae molestias autem iusto vero. Impedit 
+          praesentium modi delectus id maiores maxime recusandae, rem vitae.
+        </div>
       </div>
     </div>
-  </div>
-    
-</body>
+    <div class="wrapper-ground-floor">
+      <div class="ground-floor"></div>
+    </div>
+  </body>
 </html>
